src/sass/main-header.scss
.main-header {
	position: sticky;
	top: -2rem;
	margin-top: var(--spacing-y);
	margin-bottom: calc(var(--spacing-y) * 5);
	background: var(--base-color);
	z-index: 1;

	&__h1 {
		font-size: inherit;
	}

	&__title {
		color: var(--fg-color);
		text-decoration: none;
		font-size: 2rem;
		text-shadow: 0px 0px 0px var(--fg-color);
		transition: 0.1s ease-out color, 0.1s ease-out text-shadow;

		&:hover {
			color: var(--accent-color);
			text-shadow: 2px 2px 0px var(--pop-color);
		}
	}
}

